force-app/main/default/objects/qatestobj1__c/qatestobj1__c.object-meta.xml
<CustomObject>
    <label>qatestobj1</label>
    <nameField>
        <label>qatestobj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>qatestobj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>