force-app/main/default/objects/qatestobj1__c/fields/plf1__c.field-meta.xml
<CustomField>
    <fullName>plf1__c</fullName>
    <label>plf1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Test1</valueSetName>
    </valueSet>
</CustomField>