force-app/main/default/objects/qatestobj1__c/fields/plf4__c.field-meta.xml
<CustomField>
    <fullName>plf4__c</fullName>
    <label>plf4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Test1</valueSetName>
    </valueSet>
</CustomField>