force-app/main/default/objects/qatestobj1__c/fields/Plf5__c.field-meta.xml
<CustomField>
    <fullName>Plf5__c</fullName>
    <label>Plf5</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Test1</valueSetName>
    </valueSet>
</CustomField>